--- a/1.lesson/counter/package.json
+++ b/1.lesson/counter/package.json
@@ -16,7 +16,7 @@
     "lint:fix": "eslint --ext .ts client/* --fix && prettier --write \"client/**/*.ts\"",
     "clean": "npm run clean:program-c && npm run clean:program-rust",
     "build:program-rust": "cargo build-bpf --manifest-path=./program/Cargo.toml --bpf-out-dir=dist/program",
-    "clean:program-rust": "cargo clean --manifest-path=./program/Cargo.toml && rm -rf ./dist",
+    "clean:program-rust": "cargo clean --manifest-path=./program/Cargo.toml && rm -rf ./program/dist",
     "test:program-rust": "cargo test-bpf --manifest-path=./program/Cargo.toml",
     "pretty": "prettier --write '{,./**/}*.ts'",
     "postinstall": "cargo update --manifest-path=program/Cargo.toml"
