✨ add SPL Bonus

--- a/2.lesson/rust-by-example/Cargo.toml
+++ b/2.lesson/rust-by-example/Cargo.toml
@@ -1,3 +1,14 @@
 [workspace]
-members = [ "expressions", "functions", "generics","hello-world", "macros", "options", "primitives", "results", "traits", "variable-bindings"]
+members = [
+    "expressions",
+    "functions",
+    "generics",
+    "hello-world",
+    "macros",
+    "options",
+    "primitives",
+    "results",
+    "traits",
+    "variable-bindings",
+]
 resolver = "2"
