--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Solana-Handbook"]
 	path = Solana-Handbook
 	url = https://github.com/Ackee-Blockchain/solana-handbook
+[submodule "5.lesson/debugging-example"]
+	path = 5.lesson/debugging-example
+	url = https://github.com/Ackee-Blockchain/sos-debugging-lecture
