--- a/4.lesson/game/Anchor.toml
+++ b/4.lesson/game/Anchor.toml
@@ -1,4 +1,6 @@
 [toolchain]
+anchor_version = "0.30.1"
+solana_version = "1.18.18"
 
 [features]
 seeds = false
@@ -12,7 +14,7 @@ url = "https://api.apr.dev"
 
 [provider]
 cluster = "Localnet"
-wallet = "/home/andrej/.config/solana/id.json"
+wallet = "payer.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
