--- a/4.lesson/puppet/programs/puppet-master/Cargo.toml
+++ b/4.lesson/puppet/programs/puppet-master/Cargo.toml
@@ -14,7 +14,8 @@ no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
 default = []
+idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
-anchor-lang = "0.29.0"
+anchor-lang = "0.30.1"
 puppet = { path = "../puppet", features = ["cpi"] }
