--- a/1.lesson/hello_world/Anchor.toml
+++ b/1.lesson/hello_world/Anchor.toml
@@ -1,18 +1,18 @@
 [toolchain]
 
 [features]
-seeds = false
+resolution = true
 skip-lint = false
 
 [programs.localnet]
-hello_world = "J9TXPkyYXLw82XsedHXVq8nMsso8copxRtmpz3oWsoMJ"
+hello_world = "FZqjVHLRcdVJtU3uNcQSDt52Ao1uR9eTf7aDkY9oyJV3"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
 cluster = "Localnet"
-wallet = "payer.json"
+wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
