--- a/1.lesson/hello_world/programs/hello_world/Cargo.toml
+++ b/1.lesson/hello_world/programs/hello_world/Cargo.toml
@@ -9,11 +9,12 @@ crate-type = ["cdylib", "lib"]
 name = "hello_world"
 
 [features]
+default = []
+cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-cpi = ["no-entrypoint"]
-default = []
+idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
-anchor-lang = "0.29.0"
+anchor-lang = "0.30.1"
