--- a/Bonus-SPL-Token/lesson-example/package.json
+++ b/Bonus-SPL-Token/lesson-example/package.json
@@ -5,7 +5,7 @@
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.30.1",
+    "@coral-xyz/anchor": "0.31.1",
     "@solana/spl-token": "^0.4.9"
   },
   "devDependencies": {
