--- a/Bonus-Tokens/token-example/package.json
+++ b/Bonus-Tokens/token-example/package.json
@@ -5,8 +5,8 @@
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "0.31.1",
-    "@solana/spl-token": "^0.4.9"
+    "@coral-xyz/anchor": "^0.31.1",
+    "@solana/spl-token": "^0.4.13"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
@@ -16,6 +16,6 @@
     "mocha": "^9.0.3",
     "prettier": "^2.6.2",
     "ts-mocha": "^10.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^5.7.3"
   }
 }
