--- a/Bonus-Tokens/token-example/programs/token-example/Cargo.toml
+++ b/Bonus-Tokens/token-example/programs/token-example/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "lesson-example"
+name = "token-example"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "lesson_example"
+name = "token_example"
 
 [features]
 default = []
@@ -18,5 +18,6 @@ idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 
 [dependencies]
-anchor-lang = "0.31.1"
+anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
 anchor-spl = "0.31.1"
+
